# computer_vision_drawing

./: main.py  pyproject.toml
